--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sinon": "^1.17.4"
   },
   "devDependencies": {
+    "gulp-apidoc": "^0.2.4",
     "gulp-env": "^0.4.0",
     "supertest": "^1.2.0"
   }
